fix styles that created unintentional scrollbar on work view

--- a/client/style.css
+++ b/client/style.css
@@ -966,7 +966,6 @@ div {
   flex-wrap: wrap;
   max-width: 1600px;
   height: 100%;
-  overflow-y: scroll;
   z-index: 2;
   width: 100%;
   padding-top: 5em; }
