--- a/src/work/_work.scss
+++ b/src/work/_work.scss
@@ -6,7 +6,6 @@
     flex-wrap: wrap;
     max-width: 1600px;
     height: 100%;
-    overflow-y: scroll; 
     z-index: 2;
     width: 100%;
     padding-top: 5em;
